--- a/style.css
+++ b/style.css
@@ -4555,6 +4555,12 @@ list-style: none;
   padding: .6em;
   font-size: 1.4rem; }
 
+.post.sticky .featured {
+  display: block !important; }
+
+.post.sticky .main-container {
+  padding-top: 2.3em; }
+
 .post, .type-page, .type-attachment {
   background: #ececec;
   margin-top: .7em;
@@ -4564,12 +4570,21 @@ list-style: none;
   margin-bottom: 1em;
   padding-bottom: 1em;
   border-color: #d0d0d0;
-  box-shadow: 1px 1px #b5b5b5; }
+  box-shadow: 1px 1px #b5b5b5;
+  position: relative; }
   .post .post-head-image, .type-page .post-head-image, .type-attachment .post-head-image {
     width: 100%;
     height: auto; }
   .post .main-container, .type-page .main-container, .type-attachment .main-container {
-    padding: 1em 1em; }
+    padding: 1em; }
+    .post .main-container .featured, .type-page .main-container .featured, .type-attachment .main-container .featured {
+      position: absolute;
+      top: 0px;
+      left: 1em;
+      padding: .4em;
+      color: white;
+      background: #383838;
+      display: none; }
   .post .title, .type-page .title, .type-attachment .title {
     font-size: 3em;
     font-family: 'Poiret One', cursive; }
@@ -4600,6 +4615,9 @@ list-style: none;
     padding-left: .7em; }
   .post .postmetadata, .type-page .postmetadata, .type-attachment .postmetadata {
     padding-left: 1em; }
+
+.wp-caption {
+  max-width: 100% !important; }
 
 .commentlist {
   list-style-type: none; }
